# Screenshare_udp

./: QUICKSTART.md  README.md  WEBRTC_SETUP.md  WEBRTC_USAGE.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  nsis-hooks.nsi  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/broadcast/: capture.rs  decoder.rs  discovery.rs  encoder.rs  mod.rs  native_viewer.rs  network.rs  receiver.rs  rtp.rs  types.rs
src-tauri/src/webrtc/: mod.rs  signaling.rs  student.rs  teacher.rs
