[package]
name = "screenshare_udp_native"
version = "0.1.0"
description = "Screen Broadcast System - WebRTC + SFU"
authors = ["you"]
edition = "2021"
default-run = "screenshare_udp_native"

[lib]
name = "screenshare_udp_native_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "sfu_server"
path = "src/bin/sfu_server.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Screen capture
scrap = "0.5"

# H.264 encoding/decoding
openh264 = "0.6"

# WebRTC
webrtc = "0.11"

# Networking
socket2 = { version = "0.5", features = ["all"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
futures = "0.3"

# Image processing
image = "0.25"

# Utilities
parking_lot = "0.12"
crossbeam-channel = "0.5"
once_cell = "1.19"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
byteorder = "1.5"
thiserror = "2"
chrono = "0.4"
rtp-rs = "0.6"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# SFU HTTP server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tokio-tungstenite = "0.24"



